# proofreader

./: .gitignore  main.py  pyproject.toml
schemas/: models.py
utils/: helpers.py  rich_utils.py
