[project]
name = "proofreader"
version = "0.1.0"
description = "RAG workflow for automating exam grading"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "pymupdf-layout>=1.28.0",
    "pymupdf4llm>=1.28.0",
    "python-dotenv>=1.2.2",
    "rapidocr-onnxruntime>=1.4.4",
    "rich>=15.0.0",
]

[tool.ruff]
indent-width = 2
line-length = 100


[tool.ruff.format]
indent-style = "space"


[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = ["schemas", "utils"]
